[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
h3 = { git = "https://github.com/security-union/h3.git", branch = "add-webtransport" }
h3-quinn = { git = "https://github.com/security-union/h3.git", branch = "add-webtransport" }
h3-webtransport = { git = "https://github.com/security-union/h3.git", branch = "add-webtransport" }
http = "0.2"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
rcgen = { version = "0.10" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
structopt = "0.3"
tokio = { version = "1.27", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
octets = "0.2.0"

tracing-tree = { version = "0.2" }

[features]
tree = []

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "webtransport_server"
path = "webtransport_server.rs"
