[package]
name = "rwtrs_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rwtrs = { path = "../rwtrs" }
rustdds = "0.8.3"

futures = "0.3.28"
serde = "1.0.164"
smol = "1.3.0"

[[bin]]
name = "rwtrs"
path = "src/main.rs"
